Update deployment scripts and configuration for Monad Mainnet (chainId 143)
- Updated build info references in debug JSON files for IAgentController, IGameContractDuel, IPredictionMarket, and WagerArena.
- Modified solidity files cache with new last modification date and content hash for WagerArena.sol.
- Added new deployed addresses file for Monad Mainnet with contract addresses and agent wallet details.
- Changed chainId in hardhat configuration from 41454 to 143 for Monad Mainnet.
- Updated contract address configuration in lib/config.ts to read from environment variables for mainnet.
- Adjusted package.json to point to the correct deployment script for Monad Mainnet.
- Created new deployment script for Monad Mainnet, detailing the deployment process for multiple contracts and setting up agent accounts.

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "deploy": "npx hardhat run scripts/deploy.js",
     "deploy:localhost": "npx hardhat run scripts/deploy.js --network localhost",
     "deploy:monad-testnet": "npx hardhat run scripts/deploy-monad.js --network monadTestnet",
-    "deploy:monad-mainnet": "npx hardhat run scripts/deploy-monad.js --network monadMainnet",
+    "deploy:monad-mainnet": "npx hardhat run scripts/deploy-mainnet.js --network monadMainnet",
     "verify:monad-testnet": "npx hardhat verify --network monadTestnet",
     "verify:monad-mainnet": "npx hardhat verify --network monadMainnet",
     "agents:start": "npx ts-node --project tsconfig.scripts.json scripts/run-agents.ts",
-    "agents:testnet": "NETWORK=testnet npx ts-node --project tsconfig.scripts.json scripts/run-agents.ts"
+    "agents:testnet": "NETWORK=testnet npx ts-node --project tsconfig.scripts.json scripts/run-agents.ts",
+    "agents:mainnet": "NETWORK=mainnet npx ts-node --project tsconfig.scripts.json scripts/run-agents.ts"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
